# xcli-rs

./: Cargo.toml  LICENSE  README.md
example/: main.rs
examples/: xcli_simple.rs
src/: lib.rs
