[package]
name = "xcli"
version = "0.2.0"
authors = ["Kingwel Xie <kingwel.xie@139.com>"]
edition = "2018"
description = "xcli, a CLI implementation based on rustyline"
documentation = "https://docs.rs/xcli-rs"
#documentation = "http://docs.rs/rustyline"
readme = "README.md"
keywords = ["cli"]
categories = ["command-line-utilities"]
license = "MIT"
repository = "https://github.com/kingwel-xie/xcli-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "6.2"
rustyline-derive = "0.3.1"
log = "0.4"